# sobel-filter-example

./: README.md  meson.build  scene.glb
include/: Renderer.h  Scene.h
shaders/: firstPass.frag  firstPass.vert  secondPass.frag  secondPass.vert
src/: Renderer.cpp  Scene.cpp  main.cpp
