project('soble-filter','cpp')
src_assembler=run_command('./srcAssembler.py')
sources=src_assembler.stdout().strip().split('\n')
sfml_window=dependency('sfml-window')
glbinding=dependency('glbinding')
assimp=dependency('assimp')
executable('sobel-filter',sources,include_directories:['include'],dependencies:[sfml_window,glbinding,assimp])